# miband-heart-rate-web

./: Cargo.toml  README.md
src/: main.rs  web_server.rs
static/: index.html
