[package]
name = "miband-heart-rate-web"
authors = ["Chris"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
bluest = "0.6.8"
futures-lite = "2.6.0"
chrono = "0.4.41"

# websocket
warp = "0.3"
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
